--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-color: #000068 ;
     font-family: 'Russo One', sans-serif;
@@ -29,105 +27,48 @@ body {
 }
 
 .sign-in-container {
-    margin: 5em 35em;
+  position: relative;
+  text-align: center;
 }
 
 #my-signin2 {
-    margin: 1em;
-    border-radius: 200px;
-}
-.button-10 {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: 'Russo One', sans-serif;
-    height: 48px;
-    width: 250px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin: 1em;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 18px;
-  }
-  
-.button-10:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-  
-.button-10:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-}
-  
-.button-10:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
+  position: relative;
 }
 
+.btn {
+  padding: 1em 2.1em 1.1em;
+  width: 12%;
+  height: 10%;
+  border-radius: 3px;
+  margin: 8px 8px 8px 8px;
+  display: inline-block;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: .85em;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  position: relative;
+}
+.btn:hover, .btn:focus {
+  opacity: 0.8;
+}
+.btn:active {
+  -webkit-transform: scale(0.80);
+  -moz-transform: scale(0.80);
+  -ms-transform: scale(0.80);
+  -o-transform: scale(0.80);
+  transform: scale(0.80);
+}
 
-.button-30 {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: 'Russo One', sans-serif;
-    height: 48px;
-    width: 250px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin: 1em;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 18px;
-  }
-  
-  .button-30:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  }
-  
-  .button-30:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-  }
-  
-  .button-30:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-  }
+.gray {
+  color: black;
+  background-color: white ;
+}
 
   .space {
     background: rgba(128, 0, 128, 0.1) center / 200px 200px round;
@@ -257,4 +198,394 @@ body {
     100% {
       transform: rotate(360deg);
     }
+}
+
+/* home-user html style */
+
+.home-user-body {
+  background-color: white ;
+  font-family: 'Jost', sans-serif;
+  overflow: auto;
+}
+
+.header, footer, .awesome {
+  height: 8%;
+}
+
+.header {
+  display: flex;
+}
+
+#header-options {
+  flex: 1 0 0%;
+  display: flex;
+  float: right;
+}
+
+#empty-header {
+  flex: 1 0 0%;
+}
+
+.header-link {
+  margin: 1em 2em;
+  color:  darkgray;
+  font-size: 15px;
+  text-decoration: none;
+  position: relative;
+}
+
+.header-link:hover{ 
+  color: grey;
+}
+
+.header-link::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background-color: gray;
+  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .header-link:hover::before{
+  left: 0;
+  right: auto;
+  width: 100%;
   }
+}
+
+#logo {
+  float: left;
+}
+
+.awesome {
+  display: flex;
+}
+
+.awesome-text {
+  flex: 1 0 0%;
+  padding-left: 30px;
+}
+
+#placeholder {
+  display: block;
+  margin: auto;
+  margin-top: 2em;
+}
+
+.awesome-img {
+  flex: 1 0 0%;
+}
+
+#awesome-big {
+  font-size: 40px;
+  font-weight: 900;
+}
+
+#awesome-normal {
+  font-size: 20px;
+}
+
+.awesome button {
+  background-color: #1F2937;
+  border: 1px solid white;
+  color: white;
+  padding: 10px 40px;
+  margin: 20px;
+  margin-left: 90px;
+  text-align: center;
+  text-decoration: none;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.awesome button:hover {
+  background-color: white;
+  color: #1F2937;
+}
+
+.experience {
+  flex: 1 0 0%;
+  position: relative;
+}
+
+section.experience {
+  padding: 20px;
+}
+
+section.experience h2 {
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 20px;
+  color: rgb(115, 120, 190);
+}
+
+section.experience input {
+  position: absolute;
+  top: 200px;
+}
+
+section.experience div.exp-bar {
+  display: block;
+  width: 100%;
+  height: 20px;
+
+  background-color: darkgray;
+  border-radius: 2px;
+}
+
+section.experience div.exp-bar>span {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 20px;
+  background-color: rgb(115, 120, 190);
+  border-radius: 2px;
+  transition: all 1s ease-in-out;
+}
+
+section.experience input:checked+div.exp-bar>span {
+  width: 180px;
+  transition-duration: 4s;
+}
+
+section.experience div.exp-bar>span:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  display: block;
+  width: 4px;
+  height: 20px;
+  background-color: rgb(125, 130, 200);
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgb(125, 130, 200);
+}
+
+section.experience div.exp-bar>span:after {
+  content: '';
+
+  position: absolute;
+  right: 0;
+
+  display: block;
+  width: 4px;
+  height: 4px;
+
+  background-color: rgb(125, 130, 200);
+  border-radius: 50%;
+  box-shadow: 0 0 10px 2px rgb(125, 130, 200);
+  opacity: 0;
+}
+
+section.experience input:checked+div.exp-bar>span:after {
+  -webkit-animation: glow 1s 4;
+}
+
+@-webkit-keyframes glow {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+section.experience div.exp-bar>span>span {
+  position: absolute;
+  right: 0;
+
+  display: block;
+  width: 4px;
+  height: 4px;
+}
+
+section.experience div.exp-bar>span>span:before,
+section.experience div.exp-bar>span>span:after {
+  content: '';
+
+  position: absolute;
+
+  display: block;
+  width: 2px;
+  height: 1px;
+
+  background-color: rgb(135, 140, 210);
+  opacity: 0;
+}
+
+section.experience input:checked+div.exp-bar>span>span:before {
+  -webkit-animation: spark-1 1s linear 4;
+  -webkit-transform-origin: 0 10px;
+}
+
+section.experience input:checked+div.exp-bar>span>span:after {
+  -webkit-animation: spark-2 1s linear 4;
+  -webkit-animation-delay: 0.33s;
+  -webkit-transform-origin: 0 -20px;
+}
+
+@-webkit-keyframes spark-1 {
+  0% {
+    -webkit-transform: rotate(0);
+    opacity: 1;
+  }
+
+  20% {
+    -webkit-transform: rotate(110deg) translate(-15px, -10px);
+    opacity: 0;
+  }
+
+  20.5% {
+    -webkit-transform: rotate(0);
+    opacity: 1;
+  }
+
+  50% {
+    -webkit-transform: rotate(180deg);
+    opacity: 0;
+  }
+
+  50.5% {
+    -webkit-transform: rotate(0);
+    opacity: 1;
+  }
+
+  70% {
+    -webkit-transform: rotate(110deg) translate(-15px, -10px);
+    opacity: 0;
+  }
+
+  70.5% {
+    -webkit-transform: rotate(0);
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: rotate(180deg);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes spark-2 {
+  0% {
+    -webkit-transform: rotate(0);
+    opacity: 1;
+  }
+
+  50% {
+    -webkit-transform: rotate(-45deg) translateY(30px);
+    -webkit-transform-origin: 0 0;
+    opacity: 0;
+  }
+
+  51% {
+    -webkit-transform: rotate(0);
+    -webkit-transform-origin: 0 20px;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: rotate(-90deg) translate(-20px, -10px);
+    -webkit-transform-origin: 0 0;
+    opacity: 0;
+  }
+}
+
+.random {
+  height: 55em;
+}
+.awesome{
+    height: 20em;
+}
+
+footer p {
+    font-size: 10px;
+    text-align: center;
+    padding: 20px;
+    color: grey;
+}
+
+#random-header {
+    color: #1F2937;
+    text-align: center;
+    font-size: 30px;
+}
+
+.course-list-table {
+  text-align: center;
+}
+
+.course-list-table img {
+  margin: 1em;
+  padding: 10px;
+  border:2px solid darkgrey;
+  background: url(img/tiger.png) no-repeat;
+  box-shadow: 10px 10px 5px #ccc;
+  -moz-box-shadow: 10px 10px 5px #ccc;
+  -webkit-box-shadow: 10px 10px 5px #ccc;
+  -khtml-box-shadow: 10px 10px 5px #ccc;
+}
+
+.title-description a {
+  color: grey;
+  text-decoration: none;
+}
+
+.title-description a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+
+.signup-container{
+    margin: 7em;
+    padding: 30px;
+    padding-left: 100px;
+    border-radius: 5px;
+    background-color:#3882F6;
+    color: white;
+    display: flex;
+}
+
+#signup-text {
+    margin-right: 50px;
+    flex: 1 1 0%;
+}
+
+#signup-button {
+    flex: 1 1 0%;
+}
+
+.signup-container button {
+    background-color: #3882F6;
+    border: 1px solid white;
+    color: white;
+    padding: 10px 40px;
+    margin: 20px;
+    margin-left: 90px;
+    text-align: center;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.signup-container button:hover {
+    background-color: white;
+    color: #3882F6;
+  }
+
+#small {
+    font-size: 12px;
+    margin-top: -10px;
+    font-weight: lighter;
+}
