--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,29 @@
 body {
-    background-color: #000068 ;
-    font-family: 'Russo One', sans-serif;
-    overflow: hidden;
+  background-color: #000068;
+  font-family: "Russo One", sans-serif;
 }
 .intro-container {
-    margin: 60px;
-    margin-top: 200px;
+  margin: 60px;
+  margin-top: 200px;
 }
 
 .intro-text {
-    border: 5px solid whitesmoke;
-    background-color: #000068 ;
-    border-radius: 25px;
-    padding: 0.5em;
-    color: #F1F1F1;
-    text-align: center;
-    font-size: 3vw;
-    box-shadow: #EEEB1B  0px 54px 55px, #EEEB1B  0px -12px 30px, #EEEB1B  0px 4px 6px, #EEEB1B  0px 12px 13px, #EEEB1B  0px -3px 5px;
-    animation: blinker 3s linear infinite;
+  border: 5px solid whitesmoke;
+  background-color: #000068;
+  border-radius: 25px;
+  padding: 0.5em;
+  color: #f1f1f1;
+  text-align: center;
+  font-size: 3vw;
+  box-shadow: #eeeb1b 0px 54px 55px, #eeeb1b 0px -12px 30px, #eeeb1b 0px 4px 6px,
+    #eeeb1b 0px 12px 13px, #eeeb1b 0px -3px 5px;
+  animation: blinker 3s linear infinite;
 }
 
 @keyframes blinker {
-    50% {
-      opacity: 0.5;
-    }
+  50% {
+    opacity: 0.5;
+  }
 }
 
 .sign-in-container {
@@ -48,167 +48,104 @@ body {
   transition: 0.3s;
   font-family: sans-serif;
   font-weight: 800;
-  font-size: .85em;
+  font-size: 0.85em;
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
   position: relative;
 }
-.btn:hover, .btn:focus {
+
+.btn:hover,
+.btn:focus {
   opacity: 0.8;
 }
 .btn:active {
-  -webkit-transform: scale(0.80);
-  -moz-transform: scale(0.80);
-  -ms-transform: scale(0.80);
-  -o-transform: scale(0.80);
-  transform: scale(0.80);
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  transform: scale(0.8);
 }
 
 .gray {
   color: black;
-  background-color: white ;
+  background-color: white;
 }
 
-  .space {
-    background: rgba(128, 0, 128, 0.1) center / 200px 200px round;
-    border: 1px dashed purple;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .stars1 {
-    animation: space 80s ease-in-out infinite;
-    background-image:
-      radial-gradient(
-        1px 1px at 25px 5px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1px 1px at 50px 25px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1px 1px at 125px 20px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1.5px 1.5px at 50px 75px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2px 2px at 15px 125px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2.5px 2.5px at 110px 80px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      );
-  }
-  .stars2 {
-    animation: space 140s ease-in-out infinite;
-    background-image:
-      radial-gradient(
-        1px 1px at 75px 125px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1px 1px at 100px 75px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1.5px 1.5px at 199px 100px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2px 2px at 20px 50px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2.5px 2.5px at 100px 5px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2.5px 2.5px at 5px 5px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      );
-
-  }
-
-  .stars3 {
-    animation: space 100s ease-in-out infinite;
-    background-image:
-      radial-gradient(
-        1px 1px at 10px 10px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1px 1px at 150px 150px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1.5px 1.5px at 60px 170px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        1.5px 1.5px at 175px 180px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2px 2px at 195px 95px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      ),
-      radial-gradient(
-        2.5px 2.5px at 95px 145px, 
-        white, 
-        rgba(255, 255, 255, 0)
-      );
-  }
-
-  @keyframes space {
-    40% {
-      opacity: 0.75;
-    }
-    50% {
-      opacity: 0.25;
-    }
-    60% {
-      opacity: 0.75;
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+.space {
+  background: rgba(128, 0, 128, 0.1) center / 200px 200px round;
+  border: 1px dashed purple;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
-/* home-user html style */
+.stars1 {
+  animation: space 80s ease-in-out infinite;
+  background-image: radial-gradient(
+      1px 1px at 25px 5px,
+      white,
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(1px 1px at 50px 25px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(1px 1px at 125px 20px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(1.5px 1.5px at 50px 75px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2px 2px at 15px 125px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2.5px 2.5px at 110px 80px, white, rgba(255, 255, 255, 0));
+}
+.stars2 {
+  animation: space 140s ease-in-out infinite;
+  background-image: radial-gradient(
+      1px 1px at 75px 125px,
+      white,
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(1px 1px at 100px 75px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(1.5px 1.5px at 199px 100px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2px 2px at 20px 50px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2.5px 2.5px at 100px 5px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2.5px 2.5px at 5px 5px, white, rgba(255, 255, 255, 0));
+}
+
+.stars3 {
+  animation: space 100s ease-in-out infinite;
+  background-image: radial-gradient(
+      1px 1px at 10px 10px,
+      white,
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(1px 1px at 150px 150px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(1.5px 1.5px at 60px 170px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(1.5px 1.5px at 175px 180px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2px 2px at 195px 95px, white, rgba(255, 255, 255, 0)),
+    radial-gradient(2.5px 2.5px at 95px 145px, white, rgba(255, 255, 255, 0));
+}
+
+@keyframes space {
+  40% {
+    opacity: 0.75;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  60% {
+    opacity: 0.75;
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 .home-user-body {
-  background-color: white ;
-  font-family: 'Jost', sans-serif;
-  overflow: auto;
+  background-color: white;
+  font-family: "Jost", sans-serif;
 }
 
-.header, footer, .awesome {
+.header,
+footer,
+.awesome {
   height: 8%;
 }
 
@@ -228,18 +165,18 @@ body {
 
 .header-link {
   margin: 1em 2em;
-  color:  darkgray;
+  color: darkgray;
   font-size: 15px;
   text-decoration: none;
   position: relative;
 }
 
-.header-link:hover{ 
+.header-link:hover {
   color: grey;
 }
 
-.header-link::before{
-  content: '';
+.header-link::before {
+  content: "";
   position: absolute;
   bottom: 0;
   right: 0;
@@ -250,10 +187,10 @@ body {
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .header-link:hover::before{
-  left: 0;
-  right: auto;
-  width: 100%;
+  .header-link:hover::before {
+    left: 0;
+    right: auto;
+    width: 100%;
   }
 }
 
@@ -290,7 +227,7 @@ body {
 }
 
 .awesome button {
-  background-color: #1F2937;
+  background-color: #1f2937;
   border: 1px solid white;
   color: white;
   padding: 10px 40px;
@@ -305,14 +242,13 @@ body {
 
 .awesome button:hover {
   background-color: white;
-  color: #1F2937;
+  color: #1f2937;
 }
 
 .experience {
   flex: 1 0 0%;
   position: relative;
 }
-
 section.experience {
   padding: 20px;
 }
@@ -338,7 +274,7 @@ section.experience div.exp-bar {
   border-radius: 2px;
 }
 
-section.experience div.exp-bar>span {
+section.experience div.exp-bar > span {
   position: relative;
   display: block;
   width: 60px;
@@ -348,13 +284,13 @@ section.experience div.exp-bar>span {
   transition: all 1s ease-in-out;
 }
 
-section.experience input:checked+div.exp-bar>span {
+section.experience input:checked + div.exp-bar > span {
   width: 180px;
   transition-duration: 4s;
 }
 
-section.experience div.exp-bar>span:before {
-  content: '';
+section.experience div.exp-bar > span:before {
+  content: "";
   position: absolute;
   right: 0;
   display: block;
@@ -365,8 +301,8 @@ section.experience div.exp-bar>span:before {
   box-shadow: 0 0 5px rgb(125, 130, 200);
 }
 
-section.experience div.exp-bar>span:after {
-  content: '';
+section.experience div.exp-bar > span:after {
+  content: "";
 
   position: absolute;
   right: 0;
@@ -381,7 +317,7 @@ section.experience div.exp-bar>span:after {
   opacity: 0;
 }
 
-section.experience input:checked+div.exp-bar>span:after {
+section.experience input:checked + div.exp-bar > span:after {
   -webkit-animation: glow 1s 4;
 }
 
@@ -399,7 +335,7 @@ section.experience input:checked+div.exp-bar>span:after {
   }
 }
 
-section.experience div.exp-bar>span>span {
+section.experience div.exp-bar > span > span {
   position: absolute;
   right: 0;
 
@@ -408,26 +344,23 @@ section.experience div.exp-bar>span>span {
   height: 4px;
 }
 
-section.experience div.exp-bar>span>span:before,
-section.experience div.exp-bar>span>span:after {
-  content: '';
-
+section.experience div.exp-bar > span > span:before,
+section.experience div.exp-bar > span > span:after {
+  content: "";
   position: absolute;
-
   display: block;
   width: 2px;
   height: 1px;
-
   background-color: rgb(135, 140, 210);
   opacity: 0;
 }
 
-section.experience input:checked+div.exp-bar>span>span:before {
+section.experience input:checked + div.exp-bar > span > span:before {
   -webkit-animation: spark-1 1s linear 4;
   -webkit-transform-origin: 0 10px;
 }
 
-section.experience input:checked+div.exp-bar>span>span:after {
+section.experience input:checked + div.exp-bar > span > span:after {
   -webkit-animation: spark-2 1s linear 4;
   -webkit-animation-delay: 0.33s;
   -webkit-transform-origin: 0 -20px;
@@ -503,21 +436,21 @@ section.experience input:checked+div.exp-bar>span>span:after {
 .random {
   height: 55em;
 }
-.awesome{
-    height: 20em;
+.awesome {
+  height: 20em;
 }
 
 footer p {
-    font-size: 10px;
-    text-align: center;
-    padding: 20px;
-    color: grey;
+  font-size: 10px;
+  text-align: center;
+  padding: 20px;
+  color: grey;
 }
 
 #random-header {
-    color: #1F2937;
-    text-align: center;
-    font-size: 30px;
+  color: #1f2937;
+  text-align: center;
+  font-size: 30px;
 }
 
 .course-list-table {
@@ -527,7 +460,7 @@ footer p {
 .course-list-table img {
   margin: 1em;
   padding: 10px;
-  border:2px solid darkgrey;
+  border: 2px solid darkgrey;
   background: url(img/tiger.png) no-repeat;
   box-shadow: 10px 10px 5px #ccc;
   -moz-box-shadow: 10px 10px 5px #ccc;
@@ -545,47 +478,46 @@ footer p {
   text-decoration: none;
 }
 
-
-.signup-container{
-    margin: 7em;
-    padding: 30px;
-    padding-left: 100px;
-    border-radius: 5px;
-    background-color:#3882F6;
-    color: white;
-    display: flex;
+.signup-container {
+  margin: 7em;
+  padding: 30px;
+  padding-left: 100px;
+  border-radius: 5px;
+  background-color: #3882f6;
+  color: white;
+  display: flex;
 }
 
 #signup-text {
-    margin-right: 50px;
-    flex: 1 1 0%;
+  margin-right: 50px;
+  flex: 1 1 0%;
 }
 
 #signup-button {
-    flex: 1 1 0%;
+  flex: 1 1 0%;
 }
 
 .signup-container button {
-    background-color: #3882F6;
-    border: 1px solid white;
-    color: white;
-    padding: 10px 40px;
-    margin: 20px;
-    margin-left: 90px;
-    text-align: center;
-    text-decoration: none;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 10px;
+  background-color: #3882f6;
+  border: 1px solid white;
+  color: white;
+  padding: 10px 40px;
+  margin: 20px;
+  margin-left: 90px;
+  text-align: center;
+  text-decoration: none;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 .signup-container button:hover {
-    background-color: white;
-    color: #3882F6;
-  }
+  background-color: white;
+  color: #3882f6;
+}
 
 #small {
-    font-size: 12px;
-    margin-top: -10px;
-    font-weight: lighter;
+  font-size: 12px;
+  margin-top: -10px;
+  font-weight: lighter;
 }
