--- a/styles.css
+++ b/styles.css
@@ -590,10 +590,10 @@ html {
 
 #login-box {
   position: fixed;
-  margin: 15em;
-  margin-left: 30em;
+  top: 40%;
+  left: 32%;
   width: 600px;
-  height: 400px;
+  height: 350px;
   background: #fff;
   border-radius: 2px;
 }
@@ -700,10 +700,12 @@ input[type="submit"]:active {
   text-align: center;
 }
 
+#signIn {
+  width: 100%;
+}
+
 button.social-signin {
   margin-bottom: 20px;
-  width: 220px;
-  height: 36px;
   border: none;
   border-radius: 2px;
   color: #fff;
@@ -728,16 +730,125 @@ button.social-signin.user {
   background: grey;
 }
 
-button.social-signin.facebook {
-  background: #32508e;
-}
-
 button.social-signin.twitter {
   background: #55acee;
 }
 
 button.social-signin.google {
   background: #dd4b39;
+}
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+.container {
+  padding: 50px;
+  width: 50%;
+  background-color: white;
+  text-align: center;
+  top: 0;
+  left: 0;
+  margin: auto;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: grey;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 2px;
+}
+
+button:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  transition: 0.2s ease;
+}
+
+#signIn:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  transition: 0.2s ease;
+  color: grey;
+  background-color: whitesmoke;
+}
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
 }
 
 /* HOME USER PAGE */
