--- a/styles.css
+++ b/styles.css
@@ -824,7 +824,7 @@ button:hover {
 #signIn:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   transition: 0.2s ease;
-  color: grey;
+  color: black;
   background-color: whitesmoke;
 }
 /* Add Zoom Animation */
@@ -1152,7 +1152,9 @@ section.experience input:checked + div.exp-bar > span > span:after {
     opacity: 0;
   }
 }
-
+#questStart {
+  width: 50%;
+}
 .random {
   height: 55em;
 }
@@ -1214,16 +1216,15 @@ footer p {
 }
 
 #signup-button {
-  flex: 1 1 0%;
+  flex: 0.7 1 0%;
 }
 
 .signup-container button {
   background-color: #3882f6;
   border: 1px solid white;
   color: white;
-  padding: 10px 40px;
   margin: 20px;
-  margin-left: 90px;
+  width: 50%;
   text-align: center;
   text-decoration: none;
   transition-duration: 0.4s;
