--- a/styles.css
+++ b/styles.css
@@ -804,8 +804,7 @@ span.psw {
   cursor: pointer;
 }
 
-/* Set a style for all buttons */
-button {
+.right button {
   background-color: grey;
   color: white;
   padding: 14px 20px;
@@ -816,7 +815,7 @@ button {
   border-radius: 2px;
 }
 
-button:hover {
+.right button:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   transition: 0.2s ease;
 }
@@ -843,7 +842,6 @@ button:hover {
   to {transform: scale(1)}
 }
 
-/* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
   span.psw {
      display: block;
@@ -871,16 +869,18 @@ footer,
 
 .header {
   display: flex;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 #header-options {
   flex: 1 0 0%;
   display: flex;
-  float: right;
+  float: auto;
+  margin-top: 10px;
 }
 
 #empty-header {
-  flex: 1 0 0%;
+  flex: 0.8 0 0%;
 }
 
 .header-link {
@@ -892,7 +892,7 @@ footer,
 }
 
 .header-link:hover {
-  color: grey;
+  color:#898FAD;;
 }
 
 .header-link::before {
@@ -912,6 +912,12 @@ footer,
     right: auto;
     width: 100%;
   }
+}
+
+
+#pfp{
+  width: 40px;
+  height: 40px;
 }
 
 #logo {
@@ -1216,7 +1222,7 @@ footer p {
 }
 
 #signup-button {
-  flex: 0.7 1 0%;
+  flex: 0.8 0 0%;
 }
 
 .signup-container button {
@@ -1225,6 +1231,7 @@ footer p {
   color: white;
   margin: 20px;
   width: 50%;
+  height: 50%;
   text-align: center;
   text-decoration: none;
   transition-duration: 0.4s;
@@ -1241,4 +1248,91 @@ footer p {
   font-size: 12px;
   margin-top: -10px;
   font-weight: lighter;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 15px; 
+  border: none;
+  outline: none;
+  color: darkgrey;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+
+.dropdown-content a{
+  float: none;
+  color: darkgrey;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown:hover .dropbtn {
+  cursor: pointer;
+  color: #898FAD;
+}
+
+.dropdown-content a:hover {
+  color: white;
+  background-color: #898FAD;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+   .dropdown .dropbtn {
+    display: none;
+  }
+  a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .dropdown {float: none;}
+  .dropdown-content {position: relative;}
+  .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
+#signOutbtn {
+  border: none;
+  display: block;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: left;
+  color: darkgrey;
+  width: 100%;
+  background-color: inherit;
+}
+
+#signOutbtn:hover {
+  color: white;
+  background-color: #ff8080;
+  cursor: pointer;
 }
